--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,15 @@
-# Node modules
-node_modules
-
-# Logs and databases
-*.log
-*.db
-
-# OS files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-
-# Idea stuff
-.idea/**
-
-# Zap output
-report*.html
-
-# e2e
-test/e2e/screenshots/
-test/e2e/videos/
-
-# ignore sensitive files
-.env.local
+# Node
+node_modules/
+npm-debug.log
 .env
 
-# ignore Snyk Code scanner files
-.dccache
+# Docker
+*.log
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
+
+# OS
+.DS_Store
